# swf-panda-workers

./: README.md  activemq.md  message-formats.md  pyproject.toml
config/: swf_panda_workers.yaml
lib/swf_panda_workers/: transceiver.py
lib/swf_panda_workers/brokers/: activemq.py
lib/swf_panda_workers/utils/: config.py
