[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "swf-panda-workers"
version = "0.1.0"
description = "SWF Panda Workers — transceiver agent for EIC workflow management"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "cachetools",
    "pyyaml",
    "stomp.py",
    "swf-common-lib",
]

[project.scripts]
swf-panda-workers = "swf_panda_workers.transceiver:main"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.data-files]
"etc/swf_panda_workers" = ["config/swf_panda_workers.yaml"]
